# rover

./: .gitignore  AGENT.md  AGENTS.md  README.md  meson.build  mkdocs.yaml  pyproject.toml  rover.dbc
.cursor/rules/: no-local-push.mdc  rover-agent-guide.mdc
.github/actions/bootstrap/: action.yaml
.github/actions/build-docs/: action.yaml
.github/actions/build-firmware/: action.yaml
.github/actions/build-gateway/: action.yaml
.github/workflows/: build.yaml  docs.yaml  release.yaml
apps/: meson.build
apps/battery-monitor/: meson.build
apps/battery-monitor/include/: alarm.h  ck-data.h
apps/battery-monitor/src/: alarm.c  battery.c  ck-data.c  ck-rx-letters.c  peripherals.c
apps/battery-monitor/tests/: battery-fakes.c  battery-fakes.h  meson.build
apps/brake/src/: ck-data.c  peripherals.c  report.c  wheel-speed.c
apps/light-array/: meson.build
apps/light-array/include/: ck-data.h  lights.h  peripherals.h  ports.h
apps/light-array/src/: ck-data.c  ck.c  lights.c  main.c  peripherals.c
apps/obstacle-detector/: meson.build
apps/obstacle-detector/src/: ck-data.c  obstacle-detector.c  peripherals.c  report.c
apps/sbus-receiver/: meson.build
apps/sbus-receiver/include/: buzzer.h  ck-data.h  peripherals.h  ports.h
apps/sbus-receiver/src/: buzzer.c  ck-data.c  freertos-tasks.c  peripherals.c  steering.c
apps/servo/: meson.build
apps/servo/include/: adc.h  ck-data.h  ports.h  pwm.h  servo.h
apps/servo/src/: adc.c  ck-data.c  ck-rx-letters.c  freertos-tasks.c  peripherals.c  pwm.c  servo.c  settings.c
apps/servo/tests/: meson.build  test-adc.c  test-servo.c
apps/vesc-control/: meson.build
apps/vesc-control/include/: peripherals.h  ports.h
apps/vesc-control/src/: main.c  peripherals.c
apps/wheel/: meson.build
apps/wheel/include/: peripherals.h  ports.h  potentiometer.h
apps/wheel/src/: ck-data.c  interrupts.c  main.c  peripherals.c  potentiometer.c  wheel-speed.c
bootloader/: meson.build
bootloader/src/: ck-data.c  main.c
docs/: CNAME  index.md  meson.build
docs/can/: configuration-messages.md  control-messages.md  index.md  status-messages.md
docs/faq/: index.md
docs/getting-started/: calibration.md  index.md  rover-system.md  upgrading.md
docs/resources/: index.md
docs/ros2/: index.md  messages.md  nodes.md  safety.md
docs/stylesheets/: pdf.css  web.css
libs/: meson.build
libs/arena/: meson.build
libs/arena/tests/: meson.build
libs/can-kingdom/: meson.build
libs/can-kingdom/include/: ck-types.h
libs/can-kingdom/src/: ck-types.c  king.c  mayor.c
libs/can-kingdom/tests/: ck-types-test.c  king-test.c  mayor-test.c  meson.build
libs/circuits/: meson.build
libs/float/: meson.build
libs/float/tests/: meson.build
libs/json/: meson.build
libs/json/tests/: meson.build
libs/postmaster/: meson.build
libs/rover/: meson.build
libs/rover/src/: gen-rover-sources.py  rover-helpers.c
libs/rover/tests/: meson.build
libs/stm32-common/: meson.build
libs/stm32-common/src/: clock.c  common-peripherals.c  letter-reader.c  postmaster-base.c  spi-flash.c
libs/test-utils/: meson.build
radiomaster/: README.md  elrs-2400mhz.json  elrs-900mhz.json  rover-profiles.etx
ros-gateway/ros-package/gateway/: battery.py  bridge.py  controller.py  obstacle_detector.py  radio.py  wheel.py
ros2/: Dockerfile  README.md  entrypoint.sh
ros2/src/gateway/: Dockerfile  LICENSE  entrypoint.sh  package.xml  setup.py
ros2/src/gateway/gateway/: battery_node.py  controller_node.py  mayor_node.py  obstacle_detector_node.py  radio_node.py  wheel_node.py
ros2/src/gateway/launch/: gateway.launch.py
ros2/src/gateway/tests/: test_can_toggle.py
ros2/src/gateway_msgs/: CMakeLists.txt  package.xml
ros2/src/gateway_msgs/msg/: BatteryStatus.msg  CANStatus.msg  ObstacleDistance.msg  ReportFrequency.msg  WheelStatus.msg
ros2/src/rover_description/: README.md  package.xml  setup.py
ros2/src/rover_description/resource/: rover_description
ros2/src/rover_description/sensors/: robosense_lidar.urdf.xacro  zed2.urdf.xacro
ros2/src/rover_description/urdf/: chassis.urdf.xacro  rover.urdf.xacro  rover_config.yaml  wheels.urdf.xacro
rover_py/: calibrate_battery_monitor.py  can-log-decoder.py  candump.py  fw_update.py  fw_update.spec  live_demo.py  plot_voltage.py  pyproject.toml  record_cell_voltage.py  rover_startup.py
rover_py/demo/: light-array-demo.py  live-signal-plot-demo.py
rover_py/demo/steering/: animate.py  record.py
rover_py/flasher/: flasher.py
rover_py/rover/: __init__.py  battery.py  buzzer.py  can_interface.py  rover.py  servo.py  wheel.py
rover_py/tests/: test_battery_conf.py  test_battery_stress.py  test_brake_conf.py  test_braking.py  test_buzzer_frere_jaque.py  test_change_bitrate.py  test_radio_detection.py  test_servo_conf.py  test_wheel_conf.py
scripts/: bootstrap.sh  build-ros-gateway.sh  check-src.sh  create-release.sh  gen-system-conf.py  release-ros-gateway.sh  run-ros-gateway.sh
