[project]
name = "rover"
version = "0.9.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cantools==39.4.11",
    "common-interfaces-intellisense>=0.1.0",
    "matplotlib==3.9.2",
    "meson>=1.5.2",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.2.6",
    "mkdocs-to-pdf>=0.10.1",
    "mkdocstrings-python>=1.18.2",
    "ninja>=1.11",
    "numpy==1.26.4",
    "pyright==1.1.382.post1",
    "python-can==4.4.2",
    "rclpy-intellisense>=1.2.0",
    "rover-py",
    "ruff>=0.9.4",
    "setuptools==75.1.0",
    "shellcheck-py==0.10.0.1",
    "shfmt-py==3.7.0.1",
]

[tool.uv.sources]
rover-py = { path = "rover_py", editable = true }

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-use-pathlib
    "PTH",
    # isort
    "I",
    # pep8-naming
    "N",
]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
